wk_taa_taaqa/src/objects/Template_Line_item__c.object
<CustomObject>
    <fields>
        <fullName>AMS_Product_Category__c</fullName>
        <label>AMS Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMS_Renewals_Price__c</fullName>
        <formula>Proposal_Line_Item__r.AMS_Renewals_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AMS Renewals Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__BasePrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bundle_Acro__c</fullName>
        <formula>Product__r.ACRO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Acro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_Total_Net_Price__c</fullName>
        <label>Bundle Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <formula>TEXT(Proposal_Line_Item__r.Apttus_QPConfig__ChargeType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Price_Form__c</fullName>
        <formula>Proposal_Line_Item__r.MYA_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Total Price Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_for_order_form__c</fullName>
        <formula>(List_Price__c * Quantity__c)- Net_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount for order form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>ABS(Proposal_Line_Item__r.Apttus_QPConfig__NetAdjustmentPercent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Display_AMS_product_Category__c</fullName>
        <label>Display AMS product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eng_Sales_Terms__c</fullName>
        <formula>IF( Line_Type__c =&quot;Product/Service&quot;,IF(Is_Engagement__c  = true,IF(
 Quote_Proposal__r.Engagement_45_Maintenance__c = true,&quot;For Engagement orders: An annual fee of 45% of the then-current list price of the Software shall apply for each annual Support term. This fee is waived in the first year. &quot;,&quot;For Engagement orders: An annual fee of 50% of the then-current list price of the Software shall apply for each annual Support term. This fee is waived in the first year.&quot;),null),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eng Sales Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement_45_Maintenance__c</fullName>
        <formula>Quote_Proposal__r.Engagement_45_Maintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engagement 45% Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended_Maintenance_Months__c</fullName>
        <formula>Proposal_Line_Item__r.Extended_Maintenance_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Maintenance Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formatted_Discount__c</fullName>
        <formula>Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Formatted_Promo_Code__c</fullName>
        <formula>Proposal_Line_Item__r.Formatted_Promo_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GFX_Users__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.GFX_Users__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GFX Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Engagement__c</fullName>
        <formula>TEXT(Product__r.AMS_Product_Category__c) =&quot;Engagement Software&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Knowledge_Coach__c</fullName>
        <formula>TEXT(Product__r.AMS_Product_Category__c) = &quot;Knowledge Coach Software&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Knowledge Coach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Coach_45_Maintenance__c</fullName>
        <formula>Quote_Proposal__r.Knowledge_Coach_45_Maintenance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Coach 45% Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Coach_Sales_Terms__c</fullName>
        <formula>IF( Line_Type__c =&quot;Product/Service&quot;,IF( Is_Knowledge_Coach__c =true ,IF( Quote_Proposal__r.Knowledge_Coach_45_Maintenance__c =true, &quot;For Knowledge Coach orders: An annual fee of 45% of the then-current list price of the Software shall apply for each annual Support term. This fee is waived in the first year.&quot;,&quot;For Knowledge Coach orders:An annual fee of 50% of the then-current list price of the Software shall apply for each annual Support term. This fee is waived in the first year.&quot;),null),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Coach Sales Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__LineNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <formula>TEXT(Proposal_Line_Item__r.Apttus_QPConfig__LineStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <formula>TEXT(Proposal_Line_Item__r.Apttus_QPConfig__LineType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__ListPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price_for_STG__c</fullName>
        <formula>if( Net_Price__c &gt; List_Price__c , Net_Price__c ,List_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Price for STG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_line_discount__c</fullName>
        <formula>Proposal_Line_Item__r.My_Line_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My line discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Adjustment__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__NetAdjustmentPercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Option_Name__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__OptionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Price__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__OptionPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Conversion_Type__c</fullName>
        <formula>TEXT( Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Practice_Conversion_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Conversion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Conversion_Vendor__c</fullName>
        <formula>TEXT( Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Practice_Conversion_Vendor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practice Conversion Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Year__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Prior_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Admin_Contact_Name__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Product_Admin_Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Admin Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Admin_Email_Address__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Product_Admin_Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Admin Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Admin_Phone_Number__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Product_Admin_Phone_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Admin Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Benefit__c</fullName>
        <formula>Proposal_Line_Item__r.Product_Benefit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Benefit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Proposal_Line_Item__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Proposal_Line_Item__r.Product_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List_Price__c</fullName>
        <formula>Product__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <formula>TEXT(Product__r.Product_Sub_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sub Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Template Line items</relationshipLabel>
        <relationshipName>Template_Line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_family__c</fullName>
        <formula>TEXT(Product__r.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Product__c</fullName>
        <formula>Proposal_Line_Item__r.Professional_Services_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Professional Services Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promo_Discount_Dollar_Amount__c</fullName>
        <formula>(List_Price__c - Base_Price__c)* Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Discount Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <formula>Proposal_Line_Item__r.APTPS_PromoDiscountApplied__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Proposal_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Template Line items</relationshipLabel>
        <relationshipName>Template_Line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__Quantity2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Template Line items</relationshipLabel>
        <relationshipName>Template_Line_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_or_Optional_Component__c</fullName>
        <formula>Proposal_Line_Item__r.Required_or_Optional_Component__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required or Optional Component</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Material_Number__c</fullName>
        <formula>Proposal_Line_Item__r.SAP_Material_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Option_Form__c</fullName>
        <formula>IF(AND( Line_Type__c =&quot;Option&quot;, Required_or_Optional_Component__c &lt;&gt; TRUE),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Option Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Small_Corp_Limited_State__c</fullName>
        <formula>TEXT(Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Small_Corp_Ltd_Incl_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Small Corp Limited State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suppress_From_Order_Form__c</fullName>
        <formula>Product__r.Suppress_From_Order_Form__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suppress From Order Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Solution_States__c</fullName>
        <formula>Proposal_Line_Item__r.Apttus_QPConfig__AttributeValueId__r.Tax_Solution_States__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Solution States</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Year_1_Price__c</fullName>
        <formula>Proposal_Line_Item__r.T_Period_1_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Year 1 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Template_Year_2_Price__c</fullName>
        <formula>Proposal_Line_Item__r.T_Period_2_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Year 2 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Template_Year_3_Price__c</fullName>
        <formula>Proposal_Line_Item__r.T_Period_3_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Year 3 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Adjustment_Amount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Base_Price__c</fullName>
        <label>Total Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WK_Stub_Amount__c</fullName>
        <formula>Proposal_Line_Item__r.WK_Stub_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stub Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WK_Stub_Year_End_Date__c</fullName>
        <formula>Proposal_Line_Item__r.WK_Stub_Year_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stub Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WK_Stub_Year_Start_Date__c</fullName>
        <formula>Proposal_Line_Item__r.WK_Stub_Year_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stub Year Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X5_Digit_Promo_Code__c</fullName>
        <formula>Left(Proposal_Line_Item__r.APTS_Promo_Code__c,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Digit Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_2_Price_Form__c</fullName>
        <formula>Proposal_Line_Item__r.Year_2_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 2 Price Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_3_Price_Form__c</fullName>
        <formula>Proposal_Line_Item__r.Year_3_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 3 Price Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_4_Price_Form__c</fullName>
        <formula>Proposal_Line_Item__r.Year_4_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year 4 Price Form</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Template Line item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AMS_Product_Category__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Option_Name__c</columns>
        <columns>Product__c</columns>
        <columns>Quote_Proposal__c</columns>
        <columns>Proposal_Line_Item__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dev_View</fullName>
        <columns>NAME</columns>
        <columns>Proposal_Line_Item__c</columns>
        <columns>Product__c</columns>
        <columns>AMS_Product_Category__c</columns>
        <columns>Option_Name__c</columns>
        <columns>Quantity__c</columns>
        <columns>Net_Price__c</columns>
        <columns>Total_Price__c</columns>
        <columns>Bundle_Total_Net_Price__c</columns>
        <columns>My_line_discount__c</columns>
        <columns>Total_Adjustment_Amount__c</columns>
        <columns>Total_Base_Price__c</columns>
        <columns>Total_List_Price__c</columns>
        <columns>List_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Proposal__c</field>
            <operation>equals</operation>
            <value>Q-00000691</value>
        </filters>
        <label>Dev View</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Template Line item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Line items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>